/*
 * $Id: ChangeLog,v 1.3580 2004/11/03 20:11:08 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-03 13:04 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbexcept.ch
    * Removed incorrect ';'

  * include/hbpp.h
  * source/pp/ppcore.c
  * source/pp/pragma.c
    ! Fixed to process BEGINDUMP-ENDDUMP sections as C code when code is excluded
      using conditional directives.
    + Added logic to detect and report UN-blanaced #if*/#endif in #include files.
      This does NOT yet use the standard hb_compGenWarning() to avoid set of hb_comp_bAnyWarning.
      Ultimately, we'll probably need to add a way to enable/disable specific warnings in PP,
      and probably the compiler in general.

  * utils/xbscript/xbs_harb.ch
    * Minor cleanup.

2004-11-03 15:10 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
  * makefile.nt
    + compiler/calconst.c to hbpp rule
  * utils/hbpp/hbpp.c
    - temp calcconstant

2004-11-02 18:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * utils/hbpp/hbpp.c
    * for the moment - ifdef _MSC_VER around dummy calconst
  * include/thread.h
    * _MSVC_VER -> _MSC_VER

2004-11-03 01:30 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Fixed the debugger to save also _SET_DIRCASE value and also to save
      the application state at startup.

2004-11-02 23:10 UTC+0100 Henryk Olkowski <oh1@op.pl>
  * source/rtl/gtapi.c
   * fixed changes in hb_ctSetPos() - previous practical
        removes any parameters check
  * source/ct/ctwin.c
   * cosmetic changes and optimizations

2004-11-02 14:33 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rdd/dbcmd.c
    ! Fixed error description in DBUSEAREA to report the problematic
      alias. Reported by Enrico Maria Giordano and solution suggested
      by Ugo Garombo.